--- a/sass/components/modal.scss
+++ b/sass/components/modal.scss
@@ -139,7 +139,7 @@ transition:all 500ms ease-in-out;
 	font-size:1.2rem;
 	font-weight: 300;
 }
-.contact-box{
+.contact-box-content{
 	border:1px solid #88341b;
 	padding:30px;
 	margin:33px 0 23px;
