--- a/sass/helpers/helpers.scss
+++ b/sass/helpers/helpers.scss
@@ -14,36 +14,31 @@
     display: block;
 }
 
- 
-
-    @mixin mark
-{
-    
+@mixin mark {
     content: "";
-        width: 8px;
-        height: 8px;
-         background:#4c5172;
-        display: block;
-        position: absolute;
-      
-        left: 0;
-        right:0;
-        transform: rotate(45deg);
-        margin: 0 auto;
-        padding:0;
-             @media screen and (min-width: $large) {
-  width: 10px;
+    width: 8px;
+    height: 8px;
+    background: #4c5172;
+    display: block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    transform: rotate(45deg);
+    margin: 0 auto;
+    padding: 0;
+
+    @media screen and (min-width: $large) {
+        width: 10px;
         height: 10px;
-	  
-	   }
+    }
 }
-.content-flat-img{
-	     @media screen and (min-width: $large) {
-margin-top: 150px;
-	  
-	   }
+
+.content-flat-img {
+    @media screen and (min-width: $large) {
+        margin-top: 150px;
+    }
 }
-.mark-section::before{
-	@include mark;
-	
+
+.mark-section::before {
+    @include mark;
 }
