--- a/sass/components/forms.scss
+++ b/sass/components/forms.scss
@@ -17,16 +17,17 @@
     .form-control {
         border-radius: 6px;
         border: 1px solid #a4a6b7;
-        height: 40px;
+        height: 49px;
         padding: 0 21px;
-        box-shadow: 0;
+        box-shadow: none;
     }
-    .form-control.text-error{
-         border: 1px solid red;
+
+    .form-control.text-error {
+        border: 1px solid red;
     }
 
     textarea.form-control {
-        height: 150px;
+        height: 214px;
         resize: none;
         padding: 22px;
     }
