--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -89,7 +89,6 @@
                 list-style: none;
                 padding: 0;
                 margin: 0;
-                
 
                 li {
                     display: block;
@@ -116,7 +115,8 @@
                         }
                     }
                 }
-                li:last-of-type{
+
+                li:last-of-type {
                     margin-bottom: 0;
                 }
 
@@ -164,6 +164,10 @@
 
             @media screen and (min-width: $medium) {
                 width: 129px;
+            }
+
+            @media screen and (min-width: $extra-large-desktop-3) {
+                width: 182px;
             }
         }
     }
