--- a/sass/pages/_home/_generals.scss
+++ b/sass/pages/_home/_generals.scss
@@ -1,195 +1,232 @@
 .entry-main-header {
     position: relative;
- 
     z-index: 1;
     text-align: center;
     margin: -36px 0 25px;
-     @media screen and (min-width: $medium) {
-	   margin-bottom: 80px;
-	  
-	   }
-	    @media screen and (min-width: $large) {
-	margin-bottom: 180px;
-	  
-	   }
+
+    @media screen and (min-width: $medium) {
+        margin-bottom: 80px;
+    }
+
+    @media screen and (min-width: $large) {
+        margin-bottom: 180px;
+    }
+
+    @media screen and (min-width: $extra-large-desktop-3) {
+        margin: -75px 0 185px;
+    }
+
     &__title {
         margin: 0 auto;
-        font-family:$font-2;
+        font-family: $font-2;
         font-size: 2.8rem;
         line-height: 2.5rem;
-     
         padding: 22px 10px;
         color: #fff;
         background: #4c5172;
         width: calc(100% - 10%);
-         @media screen and (min-width: $medium) {
-	   font-size: 5rem;
-	   line-height: 5rem;
-	   }
-	   @media screen and (min-width: $extra-large) {
-	     width: calc(100% - 50%);
-	     }
-	       @media screen and (min-width: $extra-large-desktop-3) {
-    	width: calc(100% - 60%);
-    	font-size: 6rem;
-    	}
+
+        @media screen and (min-width: $medium) {
+            font-size: 5rem;
+            line-height: 5rem;
+        }
+
+        @media screen and (min-width: $extra-large) {
+            width: calc(100% - 50%);
+        }
+
+        @media screen and (min-width: $extra-large-desktop-3) {
+            width: calc(100% - 60%);
+            font-size: 6rem;
+            padding: 33px 10px;
+        }
     }
-    &__title::before{
-    	   @include mark;
-    	   top:-4px;
-    	   background:#fff;
+
+    &__title::before {
+        @include mark;
+
+        top: -4px;
+        background: #fff;
     }
-    &__subtitle{
-    	    margin: 0;
-    font-size: 1.7rem;
-    color: #4c5172;
-    font-weight: 100;
-    margin-top: 15px;
-    display: block;
-       @media screen and (min-width: $medium) {
-	   font-size: 2.7rem;
-	   margin-top: 50px;
-	  
-	   }
-	     @media screen and (min-width: $extra-large-desktop-3) {
-    	
-    	font-size: 3.6rem;
-    	line-height: 4rem;
-    	}
-    	b{
-    		font-weight: 100;
-    		position: relative;
-    	}
-    	b::after{
-    		content:"";
-    		width: 100%;
-    		height: 1px;
-    		background: #4c5172;
-    		position: absolute;
-    		bottom:-2px;
-    		left:0;
-    		right:0;
-    	}
+
+    &__subtitle {
+        margin: 0;
+        font-size: 1.7rem;
+        color: #4c5172;
+        font-weight: 100;
+        margin-top: 15px;
+        display: block;
+
+        @media screen and (min-width: $medium) {
+            font-size: 2.7rem;
+            margin-top: 50px;
+        }
+
+        @media screen and (min-width: $extra-large-desktop-3) {
+            font-size: 3.6rem;
+            line-height: 4rem;
+            margin-top: 83px;
+        }
+
+        b {
+            font-weight: 100;
+            position: relative;
+        }
+
+        b::after {
+            content: "";
+            width: 100%;
+            height: 1px;
+            background: #4c5172;
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            right: 0;
+        }
     }
 }
 
 .entry-main-header::after {
-	@include mark;
-	bottom:-25px;
-	 @media screen and (min-width: $medium) {
-	  bottom:-83px;
-	  
-	   }
-	       @media screen and (min-width: $large) {
-	margin-bottom: -20px;
-	  
-	   }
+    @include mark;
+
+    bottom: -25px;
+
+    @media screen and (min-width: $medium) {
+        bottom: -83px;
+    }
+
+    @media screen and (min-width: $large) {
+        margin-bottom: -20px;
+    }
+
+    @media screen and (min-width: $extra-large-desktop-3) {
+        bottom: -56px;
+    }
 }
 
-.about-brand{
-	margin:$gutter-main 0;
- @media screen and (min-width: $medium) {
-	  margin-top: 80px;
-	  
-	   }
-	    @media screen and (min-width: $large) {
-	  margin-top: 0px;
-	  
-	   }
-	.main-link{
-		margin-bottom: 40px;
-	}
+.about-brand {
+    margin: $gutter-main 0;
 
-	.img-1{
-		
-		margin-top: 15px;
-		  @media screen and (min-width: $extra-large-desktop-3) {
-    	height: 750px;
-    	}
-		
-	}
-	&__content{
-		  @media screen and (min-width: $extra-large-desktop-3) {
-    	padding-left: 100px;
-    	}
-	}
+    @media screen and (min-width: $medium) {
+        margin-top: 80px;
+    }
 
-}
-.about-brand__img{
-	   @media screen and (min-width: $large) {
-	margin-top: 87px;
-	  
-	   }
-	   .img-2{
-	   	  @media screen and (min-width: $extra-large-desktop-3) {
-    	height: 650px;
-    	}
-	   }
-	.img-3{
-		margin-top: 30px;
-		 @media screen and (min-width: $extra-large) {
-	     margin-top: 60px;
-	     }
-	     @media screen and (min-width: $extra-large-desktop-3) {
-    		margin-top: 80px;
-    	}
-	}
+    @media screen and (min-width: $large) {
+        margin-top: 0px;
+    }
+
+    .main-link {
+        margin-bottom: 40px;
+    }
+
+    .img-1 {
+        margin-top: 36px;
+
+        @media screen and (min-width: $extra-large-desktop-3) {
+            height: 868px;
+        }
+    }
+
+    &__content {
+        @media screen and (min-width: $extra-large-desktop-3) {
+            padding-left: 148px;
+            padding-right: 87px;
+        }
+    }
 }
 
-.about-brand-flat{
-	margin:80px 0 30px;
-	  @media screen and (min-width: $medium) {
-	  	margin-top: 100px;
-	  }
-	   
-    	  @media screen and (min-width: $extra-large-desktop-3) {
-    	width: 68%;
-    	}
+.about-brand__img {
+    @media screen and (min-width: $large) {
+        margin-top: 87px;
+    }
 
-}
-.flat-flex{
-		  @media screen and (min-width: $extra-large-desktop-3) {
-    	display: flex;
-    	justify-content: center;
-    	}
-}
-.about-brand-flat.mark-section::before{
-	top:42px;
-	  @media screen and (min-width: $medium) {
-	  top:57px;
-	  }
-	   @media screen and (min-width: $large) {
-	  display: none;
-	  }
-}
-.content-flat-img{
-	position: relative;
-	 @media screen and (min-width: $large) {
-	 	display: flex;
-	 	align-items:center;
-	 }
-	   @media screen and (min-width: $extra-large-desktop-3) {
-    	margin-top: 63px;
-    	}
-}
-.content-flat-img::before{
-	  @media screen and (min-width: $large) {
-	  @include mark;
-	  top:-55px;
-	  }
-	  @media screen and (min-width: $extra-large-desktop-3) {
-    	  top:36px;
-    	}
+    .img-2 {
+        @media screen and (min-width: $extra-large-desktop-3) {
+            height: 674px;
+        }
+    }
+
+    .img-3 {
+        margin-top: 30px;
+
+        @media screen and (min-width: $extra-large) {
+            margin-top: 60px;
+        }
+
+        @media screen and (min-width: $extra-large-desktop-3) {
+            margin-top: 80px;
+            height: 655px;
+        }
+    }
 }
 
-.img-4{
-	margin-top: 30px;
-	  @media screen and (min-width: $extra-large) {
-	background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center center;
+.about-brand-flat {
+    margin: 80px 0 30px;
+
+    @media screen and (min-width: $medium) {
+        margin-top: 100px;
+    }
+
+    @media screen and (min-width: $extra-large-desktop-3) {
+        width: 78%;
+        margin-top: 16px;
+    }
 }
-	  @media screen and (min-width: $extra-large-desktop-3) {
-    	height: 710px;
-    	}
+
+.flat-flex {
+    @media screen and (min-width: $extra-large-desktop-3) {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+.about-brand-flat.mark-section::before {
+    top: 42px;
+
+    @media screen and (min-width: $medium) {
+        top: 57px;
+    }
+
+    @media screen and (min-width: $large) {
+        display: none;
+    }
+}
+
+.content-flat-img {
+    position: relative;
+
+    @media screen and (min-width: $large) {
+        display: flex;
+        align-items: center;
+    }
+
+    @media screen and (min-width: $extra-large-desktop-3) {
+        margin-top: 63px;
+    }
+}
+
+.content-flat-img::before {
+    @media screen and (min-width: $large) {
+        @include mark;
+
+        top: -55px;
+    }
+
+    @media screen and (min-width: $extra-large-desktop-3) {
+        top: 36px;
+    }
+}
+
+.img-4 {
+    margin-top: 30px;
+
+    @media screen and (min-width: $extra-large) {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+
+    @media screen and (min-width: $extra-large-desktop-3) {
+        height: 710px;
+    }
 }
