--- a/sass/pages/_location/_generals.scss
+++ b/sass/pages/_location/_generals.scss
@@ -1,115 +1,185 @@
-.features-content::before{
-	@include mark;
-	top:-32px;
-	  @media screen and (min-width: $medium) {
-	  	top:-79px;
-	  }
-}
-.features-content::after{
-	@include mark;
-	bottom:-32px;
-	  @media screen and (min-width: $medium) {
-	  	bottom:-79px;
-	  }
-}
-.features-content{
+.features-content::before {
+    @include mark;
 
-	position: relative;
-	&__list{
-		list-style: none;
-		padding: 0;
-		margin: 0;
-  @media screen and (min-width: $large) {
-						display: flex;
-						justify-content: space-between;
-						flex-wrap:wrap;
-			   }
-		.features-box{
-			display: block;
-			position: relative;
-			margin-bottom: 30px;
-			  @media screen and (min-width: $medium) {
-			  	display: flex;
-			  	align-items:center;
-			  	
-			  	margin-bottom: 50px;
-			  	padding-left: 110px;
+    top: -32px;
 
-			  }
-			   @media screen and (min-width: $large) {
-						width: 46%;
-			   }
-			    @media screen and (min-width: $extra-large-desktop) {
-						width: 46%;
-			   }
-			    @media screen and (min-width: $extra-large-desktop-2) {
-						width: 40%;
-			   }
-			       @media screen and (min-width: $extra-large-desktop-3) {
-						width: 45%;
-			   }
-
-			&__img{
-				height: 88px;
-				margin-bottom: 30px;
-				display: flex;
-				align-items:center;
-				  @media screen and (min-width: $medium) {
-			  	margin-bottom: 0;
-			  	position: absolute;
-			  	left:0;
-
-
-			  }
-			}
-			&__text{
-				text-align: center;
-				  @media screen and (min-width: $medium) {
-			  	text-align: left;
-			  	padding-left: 30px;
-
-			  }
-
-				.heading{
-					margin: 0 0 0;
-					font-family: $font-2;
-					font-size: 2.4rem;
-					line-height: 2.5rem;
-					 @media screen and (min-width: $large) {
-						font-size: 3rem;
-					line-height: 3.2rem;
-			   }
-
-				}
-				p{
-					margin-top: 15px;
-				}
-			}
-		}
-		
-	}
+    @media screen and (min-width: $medium) {
+        top: -79px;
+    }
 }
 
+.features-content::after {
+    @include mark;
 
+    bottom: -32px;
 
-.map-location{
-	height:250px;
-	margin-top: 30px;
-	position: relative;
-	 @media screen and (min-width: $medium) {
-	height:350px;
-	margin-top: 93px;
-	 }
-	 @media screen and (min-width: $large) {
-	height:450px;
-	margin-top: 193px;
-	 }
-	  @media screen and (min-width: $extra-large-desktop) {
-	 		height:550px;
-	//margin-top: 60px;
-	 }
-	 @media screen and (min-width: $extra-large-desktop-2) {
-	 		height:720px;
-	//margin-top: 130px;
-	 }
+    @media screen and (min-width: $medium) {
+        bottom: -79px;
+    }
+}
+
+.features-content {
+    position: relative;
+
+    &__list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        @media screen and (min-width: $large) {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        .features-box {
+            display: block;
+            position: relative;
+            margin-bottom: 30px;
+
+            @media screen and (min-width: $medium) {
+                display: flex;
+                align-items: center;
+                margin-bottom: 50px;
+                padding-left: 110px;
+            }
+
+            @media screen and (min-width: $large) {
+                width: 46%;
+            }
+
+            @media screen and (min-width: $extra-large-desktop) {
+                width: 46%;
+            }
+
+            @media screen and (min-width: $extra-large-desktop-2) {
+                width: 40%;
+            }
+
+            @media screen and (min-width: $extra-large-desktop-3) {
+                width: 45%;
+            }
+
+            &__img {
+                height: 88px;
+                margin-bottom: 30px;
+                display: flex;
+                align-items: center;
+
+                @media screen and (min-width: $medium) {
+                    margin-bottom: 0;
+                    position: absolute;
+                    left: 0;
+                }
+            }
+
+            &__text {
+                text-align: center;
+
+                @media screen and (min-width: $medium) {
+                    text-align: left;
+                    padding-left: 30px;
+                }
+
+                .heading {
+                    margin: 0 0 0;
+                    font-family: $font-2;
+                    font-size: 2.4rem;
+                    line-height: 2.5rem;
+
+                    @media screen and (min-width: $large) {
+                        font-size: 3rem;
+                        line-height: 3.2rem;
+                    }
+                }
+
+                p {
+                    margin-top: 15px;
+                }
+            }
+        }
+    }
+}
+
+.map-location {
+    height: 250px;
+    margin-top: 30px;
+    position: relative;
+
+    @media screen and (min-width: $medium) {
+        height: 350px;
+        margin-top: 93px;
+    }
+
+    @media screen and (min-width: $large) {
+        height: 450px;
+        margin-top: 193px;
+    }
+
+    @media screen and (min-width: $extra-large-desktop) {
+        height: 550px;
+
+        //margin-top: 60px;
+    }
+
+    @media screen and (min-width: $extra-large-desktop-2) {
+        height: 720px;
+
+        //margin-top: 130px;
+    }
+}
+
+/* maps */
+
+.google-popup {
+    font-size: 1.2rem;
+    font-weight: 300;
+    color: #a45c47;
+    border: 0;
+    background: none;
+}
+
+.gm-style .gm-style-iw {
+    background-color: transparent !important;
+    top: 90px !important;
+    left: 100px !important;
+    width: 100% !important;
+    padding-top: 10px;
+    display: block !important;
+}
+
+/*style the p tag*/
+.gm-style .gm-style-iw #google-popup p {
+    padding: 10px;
+    color: #a45c47;
+    line-height: 1.3rem;
+    font-size: 1rem;
+    font-weight: 300;
+
+    b {
+        font-size: 1.2rem;
+    }
+}
+
+/*style the arrow*/
+.gm-style div div div div div div div div {
+    background-color: transparent !important;
+    padding: 0;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    color: #fff;
+    font-size: 16px;
+}
+
+/*style the link*/
+.gm-style div div div div div div div div a {
+    color: #f1f1f1;
+    font-weight: bold;
+}
+
+.gm-style div div div div div {
+    color: red;
+    background-color: transparent !important;
+    box-shadow: none !important;
 }
