--- a/sass/pages/_flat-list/_generals.scss
+++ b/sass/pages/_flat-list/_generals.scss
@@ -190,8 +190,12 @@
     }
 
     .img-content {
-        //height: 100px;
-        height: 60px;
+      height:196px;
+          @media screen and (min-width: $medium) {
+ height: 60px;
+          }
+         
+      
         margin-top: 7px;
 
         @media screen and (min-width: $extra-large-desktop-3) {
