--- a/sass/layout/generals.scss
+++ b/sass/layout/generals.scss
@@ -3,7 +3,9 @@
     font-size: 3.5rem;
     line-height: 2.5rem;
     margin: 0 0 20px;
-
+ @media screen and (max-width: $small) {
+text-align: center;
+ }
     @media screen and (min-width: $medium) {
         font-size: 5rem;
         line-height: 5.8rem;
