--- a/sass/pages/_contact/_generals.scss
+++ b/sass/pages/_contact/_generals.scss
@@ -13,6 +13,7 @@
 }
 
 .content-form {
+	 margin-top: 30px;
     .content-heading {
         @media screen and (min-width: $large) {
             margin-bottom: 40px;
@@ -29,7 +30,7 @@
 }
 
 .aside-contact {
-    margin-top: 30px;
+  //  margin-top: 30px;
 
     @media screen and (min-width: $extra-large-desktop-3) {
         padding-left: 37px;
