--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -67,8 +67,8 @@
             @media screen and (min-width: $extra-large-desktop) {
                 width: 600px;
                 padding: 45px 84px;
-                height: auto;
-                top: 30px;
+              //  height: auto;
+                //top: 30px;
                 left: -630px;
             }
 
